--- a/src/app/main/apps/contacts/contact-form/contact-form.component.scss
+++ b/src/app/main/apps/contacts/contact-form/contact-form.component.scss
@@ -324,7 +324,7 @@ form {
     font-size: 10px;
   }
   .logo-display2 {
-    margin-left: 114px;
+    margin-left: 132px;
     margin-top: 20px;
   }
   .buttons1 {
@@ -357,5 +357,8 @@ form {
     min-height: 102px !important;
     max-height: 192px !important;
     justify-content: space-between !important;
+  }
+  .logo-display2{
+    margin-top:22px;
   }
 }
